--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_organizacion_eventos?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_organizacion_eventos?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=sasa1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
